tests/unit/errors/test4.js
// Muchos puntos y comas faltantes

var a = 5
var b = 6
var a = 5
var b = 6
var a = 5
var b = 6
if(true){
	console.log(1);	
}
